--- a/web-app-repository/web-app-repository.csproj
+++ b/web-app-repository/web-app-repository.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Dapper" Version="2.1.35" />
+		<PackageReference Include="MongoDB.Driver" Version="3.0.0" />
 		<PackageReference Include="MySqlConnector" Version="2.3.7" />
 		<PackageReference Include="StackExchange.Redis" Version="2.8.16" />
 	</ItemGroup>
